--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,5 +1,5 @@
-/* Sticky footer styles
--------------------------------------------------- */
+@import url('https://fonts.googleapis.com/css?family=Work+sans');
+
 html {
     position: relative;
     min-height: 100%;
@@ -7,6 +7,8 @@ html {
   body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    font-family: 'Work sans', sans-serif;
+    font-size: 1em;
   }
   .footer {
     position: absolute;
@@ -16,22 +18,4 @@ html {
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
-  }
-  
-  
-  /* Custom page CSS
-  -------------------------------------------------- */
-  /* Not required for template or sticky footer method. */
-  
-  body > .container {
-    padding: 60px 15px 0;
-  }
-  
-  .footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  
-  code {
-    font-size: 80%;
   }
