--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Work+sans');
-
 html {
     position: relative;
     min-height: 100%;
@@ -7,7 +5,8 @@ html {
   body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-    font-family: 'Work sans', sans-serif;
+    font-family: 'sans serif';
+    letter-spacing: -0.1ch;
     font-size: 1em;
   }
   .footer {
